--- a/index.html
+++ b/index.html
@@ -380,5 +380,79 @@
     </section>
 
 
+
+    <section class="categories">
+
+      <div class="cgsheading">
+      <div class="cgshead">
+        <div class="sln"></div>
+        <div class="bln"></div>
+        <span>TESTIMONIAL</span>
+        <div class="bln"></div>
+        <div class="sln"></div>
+      </div>
+      <div>
+        <h1>Our Students Say!</h1>
+      </div>
+    </div>
+
+
+
+  <div class="testm">
+
+
+    <div class="testm1 fadel">
+      <div class="testmimg"><img src="https://images.pexels.com/photos/12592491/pexels-photo-12592491.png?auto=compress&cs=tinysrgb&w=600" alt=""></div>
+      <div>
+        <h1>Client Name</h1>
+        <p>Profession</p>
+      </div>
+      <div class="testimdesc">
+        <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio doloribus quo natus, alias officia dolor.</span>
+      </div>
+    </div>
+
+
+    <div class="testm2">
+      <div class="testmimg"><img src="https://images.pexels.com/photos/12592491/pexels-photo-12592491.png?auto=compress&cs=tinysrgb&w=600" alt=""></div>
+      <div>
+        <h1>Client Name</h1>
+        <p>Profession</p>
+      </div>
+      <div class="testimdesc">
+        <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio doloribus quo natus, alias officia dolor.</span>
+      </div>
+    </div>
+
+
+    <div class="testm3 fader">
+      <div class="testmimg"><img src="https://images.pexels.com/photos/12592491/pexels-photo-12592491.png?auto=compress&cs=tinysrgb&w=600" alt=""></div>
+      <div>
+        <h1>Client Name</h1>
+        <p>Profession</p>
+      </div>
+      <div class="testimdesc">
+        <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio doloribus quo natus, alias officia dolor.</span>
+      </div>
+    </div>
+    
+
+   
+
+  </div>
+
+  <div class="choose">
+    <div class="choose1"></div>
+    <div class="choose1"></div>
+    <div class="choose1 chooseb"></div>
+    <div class="choose1"></div>
+  </div>
+
+
+   
+
+    </section>
+
+
   </body>
 </html>
