--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./assets/CSS/index.css" />
   </head>
   <body>
+
+    <!-- Header -->
+
     <header>
       <div class="lefth">
         <div class="logo">
@@ -33,6 +36,9 @@
         </div>
       </div>
     </header>
+
+
+    <!-- Introduction -->
 
     <main>
       <div class="color"></div>
@@ -64,6 +70,8 @@
         </div>
       </section>
     </main>
+
+    <!-- Offer -->
 
     <section class="available">
       <div class="avail1">
@@ -107,6 +115,8 @@
         </div>
       </div>
     </section>
+
+    <!-- About us -->
 
     <section class="aboutus">
       <div class="auimg">
@@ -381,6 +391,8 @@
 
 
 
+    <!-- Testimonial -->
+
     <section class="categories">
 
       <div class="cgsheading">
@@ -452,6 +464,85 @@
    
 
     </section>
+
+
+    <!-- Footer -->
+
+
+
+    <footer>
+
+      <div class="fttop">
+        <div class="ftql ftdesc">
+          <h1>Quick Link</h1>
+          <ul>
+            <li>
+              About Us
+            </li>
+            <li>
+              Contact Us
+            </li>
+            <li>
+              Privacy Policy
+            </li>
+            <li>
+              Terms & Condition
+            </li>
+            <li>
+              FAQs & Help
+            </li>
+          </ul>
+        </div>
+        <div class="ftcnt ftdesc">
+          <h1>Contact</h1>
+          <ul>
+            <li>123 Street, New York,USA</li>
+            <li>+01234567890</li>
+            <li>info@example.com</li>
+          </ul>
+          <div class="ftctnim"> 
+            <div class="fttwt"><img src="./assets/Images/twitter (6).png" alt=""></div>
+            <div class="ftfb"><img src="./assets/Images/facebook-app-symbol.png" alt=""></div>
+            <div class="ftyt"><img src="./assets/Images/youtube.png" alt=""></div>
+            <div class="ftlin"><img src="./assets/Images/linkedin.png" alt=""></div>
+          </div>
+        </div>
+
+
+        <div class="ftglr ftdesc">
+          <h1>Gallery</h1>
+          <div class="glrtp">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="glrbt">
+            <div></div>
+            <div></div>
+            <div></div>
+            
+          </div>
+        </div>
+        <div class="ftnews ftdesc">
+          <h1>Newletter</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quisquam.</p>
+          <div><input type="text" placeholder="Your mail"/><button type="submit">Sign Up</button></div>
+        </div>
+      </div>
+
+      <div class="ftrbt">
+        <div class="ftrbtl"></div>
+        <div class="ftrbtr">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Cookies</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">FQAs</a></li>
+          </ul>
+        </div>
+      </div>
+
+    </footer>
 
 
   </body>
